# qjs-demo

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  hello.js
src/: main.cpp
